--- a/iap/quickstart.mdx
+++ b/iap/quickstart.mdx
@@ -1,30 +1,16 @@
 ---
-title: 'Quickstart'
-description: 'Get started with ZeroSettle In-App Purchase'
+title: 'Quickstart (Swift)'
+description: 'Get started with ZeroSettle In-App Purchase for Swift'
 icon: 'rocket'
 ---
 
 <Note>
-  Requires **iOS 17.0+**, **Swift 5.9+**, and **Xcode 15.0+**.
+  Requires **iOS 17.0+**, **Swift 5.9+**, and **Xcode 15.0+**. See [Installation](/iap/installation) if you haven't added the package yet.
 </Note>
 
-## Installation
-
-Add ZeroSettleKit to your project via Swift Package Manager:
-
-```
-https://github.com/zerosettle/ZeroSettleKit
-```
-
-Or add it to your `Package.swift`:
-
-```swift
-dependencies: [
-    .package(url: "https://github.com/zerosettle/ZeroSettleKit", from: "1.0.0")
-]
-```
-
-Then add `ZeroSettleKit` as a dependency of your target.
+<Tip>
+  Using Flutter? See the [Flutter Quickstart](/iap/quickstart-flutter) instead.
+</Tip>
 
 ## Configuration
 
