--- a/index.mdx
+++ b/index.mdx
@@ -43,6 +43,20 @@ const catalog = await ZeroSettle.fetchProducts(user.id);
 />
 ```
 
+```dart Flutter
+import 'package:zerosettle/zerosettle.dart';
+
+// Configure once
+await ZeroSettle.instance.configure(publishableKey: 'your_key');
+
+// Fetch your product catalog
+final catalog = await ZeroSettle.instance.fetchProducts(userId: user.id);
+
+// Show the payment sheet
+final txn = await ZeroSettle.instance.presentPaymentSheet(
+    productId: product.id, userId: user.id);
+// Done. That's it.
+```
 </CodeGroup>
 
 ---
@@ -77,7 +91,7 @@ Replace Apple's 30% cut with our 5% + 50¢ fee. ZeroSettle acts as your Merchant
 - **Refunds** — We handle refund requests and chargebacks
 - **Receipts** — Automatic email receipts to customers
 
-<Card title="Get Started with IAP" icon="rocket" href="/iap/quickstart">
+<Card title="Get Started with IAP" icon="rocket" href="/iap/installation">
   Add web checkout to your app in under 10 minutes
 </Card>
 
