Update docs for android support

--- a/iap/best-practices.mdx
+++ b/iap/best-practices.mdx
@@ -488,5 +488,5 @@ Only use publishable keys in your app. Secret keys belong on your server:
 
 | Key Type | Where to Use |
 |----------|--------------|
-| Publishable | iOS app |
+| Publishable | iOS / Android app |
 | Secret | Your backend only |
