--- a/iap/quickstart-flutter.mdx
+++ b/iap/quickstart-flutter.mdx
@@ -5,7 +5,7 @@ icon: 'rocket'
 ---
 
 <Note>
-  Requires **Flutter 3.3.0+** and **iOS 17.0+**. See [Installation](/iap/installation) if you haven't added the package yet.
+  Requires **Flutter 3.3.0+**, **iOS 17.0+** and/or **Android API 26+**. See [Installation](/iap/installation) if you haven't added the package yet.
 </Note>
 
 ## Configuration
