--- a/iap/quickstart.mdx
+++ b/iap/quickstart.mdx
@@ -9,7 +9,7 @@ icon: 'rocket'
 </Note>
 
 <Tip>
-  Using Flutter? See the [Flutter Quickstart](/iap/quickstart-flutter) instead.
+  Using Android? See the [Android Quickstart](/iap/quickstart-android). Using Flutter? See the [Flutter Quickstart](/iap/quickstart-flutter).
 </Tip>
 
 ## Configuration
