--- a/iap/storekit-integration.mdx
+++ b/iap/storekit-integration.mdx
@@ -6,6 +6,10 @@ icon: 'apple'
 
 ZeroSettle works alongside Apple's StoreKit 2. You can use web checkout as your primary payment method and StoreKit as a fallback, or offer both options side-by-side.
 
+<Tip>
+  Building for Android? See [Play Billing Integration](/iap/play-billing-integration) for the equivalent guide using Google Play Billing.
+</Tip>
+
 ## How It Works
 
 When `syncStoreKitTransactions` is enabled (the default), the SDK's `StoreKitManager` automatically:
